# Multi-Vendor-eCommerce

./: .dockerignore  .flake8  .gitignore  Procfile  README.md  db.sqlite3  manage.py  requirements.txt  setup.cfg
.circleci/: config.yml
.github/workflows/: FUNDING.yml  codeql-analysis.yml  coverage.yml  devskim-analysis.yml  linters.yml  shiftleft-analysis.yml  testing.yml  tests.yml
Project/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
blog/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/test/: test_blog_model.py
cart/: apps.py  cart.py  context_processors.py  urls.py  views.py
core/: admin.py  decorators.py  models.py  tests.py  urls.py  views.py
core/migrations/: 0001_initial.py
customers/: admin.py  decorators.py  forms.py  manager.py  models.py  urls.py  views.py
customers/migrations/: 0001_initial.py  0002_alter_customer_options.py  0003_alter_customer_user.py  0004_alter_customer_full_name.py  (+1 more)
docs/: additional-resources.md  application-overview.md  deployment.md  error-handling.md  project-configuration.md  security.md  style-guide.md  testing.md
estore/: Catagori.html  checkout.html  confirmation.html  elements.html
model/: common_fields.py
newsletter/: admin.py  apps.py  models.py  tasks.py  urls.py  views.py
order/: admin.py  apps.py  forms.py  models.py  tasks.py  urls.py  utilities.py  views.py
product/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
review/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
wishlist/: apps.py  urls.py  views.py
(+110 files in other folders)
