[metadata]
name = eCommerce software application
url = https://multi-vendor-ecommerce-app.herokuapp.com/
author = Hossain Chisty(Backend Developer)
author_email = hossain.chisty11@gmail.com
description = Multi-seller e-commerce marketplace.
long_description = file: README.md


[flake8]
exclude = .git, *venv, *migrations, *review, *order, *core
ignore = E501,F841
max-line-length = 133


[isort]
combine_as_imports = true
default_section = THIRDPARTY
include_trailing_comma = true
known_first_party = django
line_length = 79
multi_line_output = 5
